// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`options defaultOptions should return the default options when no options are provided 1`] = `
Object {
  "addIOSBezelCorners": false,
  "addressBarShadowPadding": 6,
  "autoElementScroll": true,
  "autoSaveBaseline": false,
  "clearFolder": false,
  "compareOptions": Object {
    "blockOutSideBar": false,
    "blockOutStatusBar": false,
    "blockOutToolBar": false,
    "ignoreAlpha": false,
    "ignoreAntialiasing": false,
    "ignoreColors": false,
    "ignoreLess": false,
    "ignoreNothing": false,
    "rawMisMatchPercentage": false,
    "returnAllCompareData": false,
    "saveAboveTolerance": 0,
    "scaleImagesToSameSize": false,
  },
  "disableCSSAnimation": false,
  "formatImageName": "{tag}-{browserName}-{width}x{height}-dpr-{dpr}",
  "fullPageScrollTimeout": 1500,
  "hideScrollBars": true,
  "isHybridApp": false,
  "logLevel": "info",
  "savePerInstance": false,
  "tabbableOptions": Object {
    "circle": Object {
      "backgroundColor": "#ff0000",
      "borderColor": "#000",
      "borderWidth": 1,
      "fontColor": "#fff",
      "fontFamily": "Arial",
      "fontSize": 10,
      "showNumber": true,
      "size": 10,
    },
    "line": Object {
      "color": "#000",
      "width": 1,
    },
  },
  "toolBarShadowPadding": 6,
}
`;

exports[`options defaultOptions should return the provided options when options are provided 1`] = `
Object {
  "addIOSBezelCorners": false,
  "addressBarShadowPadding": 1,
  "autoElementScroll": true,
  "autoSaveBaseline": true,
  "clearFolder": false,
  "compareOptions": Object {
    "blockOutSideBar": true,
    "blockOutStatusBar": true,
    "blockOutToolBar": true,
    "ignoreAlpha": true,
    "ignoreAntialiasing": true,
    "ignoreColors": true,
    "ignoreLess": true,
    "ignoreNothing": true,
    "rawMisMatchPercentage": true,
    "returnAllCompareData": true,
    "saveAboveTolerance": 12,
    "scaleImagesToSameSize": true,
  },
  "disableCSSAnimation": true,
  "formatImageName": "{foo}-{bar}",
  "fullPageScrollTimeout": 12345,
  "hideScrollBars": true,
  "isHybridApp": false,
  "logLevel": "info",
  "savePerInstance": true,
  "tabbableOptions": Object {
    "circle": Object {
      "backgroundColor": "backgroundColor",
      "borderColor": "borderColor",
      "borderWidth": 123,
      "fontColor": "fontColor",
      "fontFamily": "fontFamily",
      "fontSize": 321,
      "showNumber": false,
      "size": 567,
    },
    "line": Object {
      "color": "color",
      "width": 987,
    },
  },
  "toolBarShadowPadding": 1,
}
`;

exports[`options methodCompareOptions should not return the method options when no options are provided 1`] = `Object {}`;

exports[`options methodCompareOptions should return the provided options when options are provided 1`] = `
Object {
  "blockOut": Array [
    Object {
      "height": 1,
      "width": 2,
      "x": 3,
      "y": 4,
    },
  ],
  "ignoreAlpha": true,
  "ignoreAntialiasing": true,
  "ignoreColors": true,
  "ignoreLess": true,
  "ignoreNothing": true,
  "rawMisMatchPercentage": true,
  "returnAllCompareData": true,
  "saveAboveTolerance": 12,
  "scaleImagesToSameSize": true,
}
`;

exports[`options screenMethodCompareOptions should not return the screen method options when no options are provided 1`] = `Object {}`;

exports[`options screenMethodCompareOptions should return the provided options when options are provided 1`] = `
Object {
  "blockOut": Array [
    Object {
      "height": 1,
      "width": 2,
      "x": 3,
      "y": 4,
    },
  ],
  "blockOutSideBar": false,
  "blockOutStatusBar": false,
  "blockOutToolBar": false,
  "ignoreAlpha": true,
  "ignoreAntialiasing": true,
  "ignoreColors": true,
  "ignoreLess": true,
  "ignoreNothing": true,
  "rawMisMatchPercentage": true,
  "returnAllCompareData": true,
  "saveAboveTolerance": 12,
  "scaleImagesToSameSize": true,
}
`;
